tests/ui/associated-type-bounds/duplicate.stderr
error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:7:36
   |
LL | struct SI1<T: Iterator<Item: Copy, Item: Send>> {
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:11:36
   |
LL | struct SI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:15:39
   |
LL | struct SI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:21:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:28:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:35:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:41:34
   |
LL | enum EI1<T: Iterator<Item: Copy, Item: Send>> {
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:45:34
   |
LL | enum EI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:49:37
   |
LL | enum EI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:55:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:62:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:69:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:75:35
   |
LL | union UI1<T: Iterator<Item: Copy, Item: Send>> {
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:79:35
   |
LL | union UI2<T: Iterator<Item: Copy, Item: Copy>> {
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:83:38
   |
LL | union UI3<T: Iterator<Item: 'static, Item: 'static>> {
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:89:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:96:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:103:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:109:32
   |
LL | fn FI1<T: Iterator<Item: Copy, Item: Send>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:111:32
   |
LL | fn FI2<T: Iterator<Item: Copy, Item: Copy>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:113:35
   |
LL | fn FI3<T: Iterator<Item: 'static, Item: 'static>>() {}
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:117:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:123:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:129:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:134:42
   |
LL | fn FRPIT1() -> impl Iterator<Item: Copy, Item: Send> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:139:42
   |
LL | fn FRPIT2() -> impl Iterator<Item: Copy, Item: Copy> {
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:144:45
   |
LL | fn FRPIT3() -> impl Iterator<Item: 'static, Item: 'static> {
   |                              -------------  ^^^^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:149:40
   |
LL | fn FAPIT1(_: impl Iterator<Item: Copy, Item: Send>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:151:40
   |
LL | fn FAPIT2(_: impl Iterator<Item: Copy, Item: Copy>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:153:43
   |
LL | fn FAPIT3(_: impl Iterator<Item: 'static, Item: 'static>) {}
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:156:35
   |
LL | type TAI1<T: Iterator<Item: Copy, Item: Send>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:158:35
   |
LL | type TAI2<T: Iterator<Item: Copy, Item: Copy>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:160:38
   |
LL | type TAI3<T: Iterator<Item: 'static, Item: 'static>> = T;
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:164:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:169:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:174:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:178:36
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:180:36
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:182:39
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:184:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:186:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:188:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:191:36
   |
LL | trait TRI1<T: Iterator<Item: Copy, Item: Send>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:193:36
   |
LL | trait TRI2<T: Iterator<Item: Copy, Item: Copy>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:195:39
   |
LL | trait TRI3<T: Iterator<Item: 'static, Item: 'static>> {}
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:197:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:197:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:201:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:201:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:205:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:205:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:211:29
   |
LL |     T: Iterator<Item: Copy, Item: Send>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:217:29
   |
LL |     T: Iterator<Item: Copy, Item: Copy>,
   |                 ----------  ^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:223:32
   |
LL |     T: Iterator<Item: 'static, Item: 'static>,
   |                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                 |
   |                 `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:229:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:229:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:237:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:237:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:245:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:245:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:252:34
   |
LL |     type A: Iterator<Item: Copy, Item: Send>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:256:34
   |
LL |     type A: Iterator<Item: Copy, Item: Copy>;
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:260:37
   |
LL |     type A: Iterator<Item: 'static, Item: 'static>;
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:136:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:141:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0282]: type annotations needed
  --> $DIR/duplicate.rs:146:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:197:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:201:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:205:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:229:32
   |
LL |     Self: Iterator<Item: Copy, Item: Send>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:237:32
   |
LL |     Self: Iterator<Item: Copy, Item: Copy>,
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/duplicate.rs:245:35
   |
LL |     Self: Iterator<Item: 'static, Item: 'static>,
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 72 previous errors

Some errors have detailed explanations: E0282, E0719.
For more information about an error, try `rustc --explain E0282`.
